Dpkg-build working

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,6 @@ Source: kvp-server
 Section: unknown
 Priority: extra
 Maintainer: Dmitry <maintainer@email.org>
-Build-Depends:  debhelper (>= 7.0.50~), libqt4-dev
 Standards-Version: 3.8.4
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://git.debian.org/collab-maint/kvp-server.git
@@ -10,5 +9,11 @@ Homepage: <insert the upstream URL, if relevant>
 
 Package: kvp-server
 Architecture: any
+Description: <insert up to 60 chars description>
+ <insert long description, indented with spaces>
+
+Package: kvp-server-tests
+Architecture: any
+Depends: kvp-server
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
